fix(stats): improve transmission status handling and error display
- Add reason for disabled transmission when URL is not configured
- Validate TRANSMISSION_URL format and return error if invalid
- Update UI to display detailed status messages

--- a/public/index.html
+++ b/public/index.html
@@ -317,11 +317,13 @@
         const txActiveCountDiv = document.getElementById("transmission-active-count");
         const txTorrentsDiv = document.getElementById("transmission-torrents");
         if (!tx.enabled) {
-          txStatusDiv.textContent = "Deshabilitado";
+          txStatusDiv.textContent = tx.reason ? `Deshabilitado (${tx.reason})` : "Deshabilitado";
           txDlDiv.textContent = "-";
           txUlDiv.textContent = "-";
           txActiveCountDiv.textContent = "0";
-          txTorrentsDiv.innerHTML = '<div class="metric-value">No hay datos</div>';
+          txTorrentsDiv.innerHTML = tx.reason
+            ? `<div class="metric-value">${tx.reason}</div>`
+            : '<div class="metric-value">No hay datos</div>';
         } else if (tx.error) {
           txStatusDiv.textContent = tx.error;
           txDlDiv.textContent = "-";
