feat: Add SD card usage pie chart with center percentage display and refactor storage card layout.

--- a/public/index.html
+++ b/public/index.html
@@ -72,14 +72,25 @@
 
   <div class="card">
     <h3>️ HDD</h3>
-    <div id="storage-hdd"></div>
-    <div class="chart-container-pie">
-      <canvas id="chart-hdd-pie"></canvas>
+    <div class="card-content">
+      <div id="storage-hdd" class="metric"></div>
+      <div class="metric">
+        <div class="chart-container-pie" style="margin: 0 auto;">
+          <canvas id="chart-hdd-pie"></canvas>
+        </div>
+      </div>
     </div>
   </div>
   <div class="card">
     <h3>📀 SD</h3>
-    <div id="storage-sd"></div>
+    <div class="card-content">
+      <div id="storage-sd" class="metric"></div>
+      <div class="metric">
+        <div class="chart-container-pie" style="margin: 0 auto;">
+          <canvas id="chart-sd-pie"></canvas>
+        </div>
+      </div>
+    </div>
   </div>
 
   <div class="card">
